--- a/Ops40104.md
+++ b/Ops40104.md
@@ -13,3 +13,7 @@
   - Operating Systems, Middleware, Network Devices, Cloud Providers, Mobile Devices, Desktop Software, Server Software
 3) How would you convince your manager that applying CIS Benchmarks could fast-track your organization’s compliance?
   - Point out that CIS Benchmarks are a shortcut to compliance. They cover many of the security requirements common in legal standards, so by following them, we're already checking off a big chunk of our compliance tasks. Plus, they're developed by experts, so we can trust we're not just compliant, but also truly secure. This saves us time and protects our reputation, making it a smart move for the business.
+
+
+# resources
+https://www.ibm.com/topics/cis-benchmarks
