--- a/Ops40113.md
+++ b/Ops40113.md
@@ -1,5 +1,18 @@
+# Author: Bradley Baack
+
+## Description: Reading notes for Reading 13
+
+### 
 
 
-What are the benefits of a forward proxy?
-Explain the differences between a forward and a reverse proxy?
-Explain to your manager why your organization might benefit from implementing a reverse proxy?
+
+1) What are the benefits of a forward proxy?
+  - The benefits of a forward proxy is that it gives you accesss control, privacy, security, bypass restrictions, and caching.
+2) Explain the differences between a forward and a reverse proxy?
+  - Differents are thae postions. Where forward is in front of client whwere reverse in in fornt of hte servers
+  - Also Use. Forward controls client internet access wher reverse policy mangers server requests.
+3) Explain to your manager why your organization might benefit from implementing a reverse proxy?
+  - You impliment a reverse proxy because you want to do load balancing, have more security, performance needs, as well as scalability.
+
+# Resources
+https://www.cloudflare.com/learning/cdn/glossary/reverse-proxy/
